kubernetes/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: microapp
  labels:
    app: ecommerce
    proyecto: microproyecto2
