kubernetes/01-users-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: users-service
  namespace: microapp
  labels:
    app: users-service
spec:
  replicas: 2
  selector:
    matchLabels:
      app: users-service
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 0
      maxSurge: 1
  template:
    metadata:
      labels:
        app: users-service
    spec:
      restartPolicy: Always
      containers:
        - name: users-service
          image: acrmp2grupo10.azurecr.io/users-service:v1
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 3001
              name: http
          readinessProbe:
            httpGet:
              path: /health
              port: 3001
            initialDelaySeconds: 2
            periodSeconds: 5
          livenessProbe:
            httpGet:
              path: /health
              port: 3001
            initialDelaySeconds: 10
            periodSeconds: 10
          resources:
            requests:
              cpu: 50m
              memory: 64Mi
            limits:
              cpu: 200m
              memory: 128Mi
---
apiVersion: v1
kind: Service
metadata:
  name: users-svc
  namespace: microapp
  labels:
    app: users-service
spec:
  type: ClusterIP
  selector:
    app: users-service
  ports:
    - port: 3001
      targetPort: 3001
      name: http
