kubernetes/03-orders-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: orders-service
  namespace: microapp
  labels:
    app: orders-service
spec:
  replicas: 2
  selector:
    matchLabels:
      app: orders-service
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 0
      maxSurge: 1
  template:
    metadata:
      labels:
        app: orders-service
    spec:
      restartPolicy: Always
      containers:
        - name: orders-service
          image: acrmp2grupo10.azurecr.io/orders-service:v1
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 3003
              name: http
          readinessProbe:
            httpGet:
              path: /health
              port: 3003
            initialDelaySeconds: 2
            periodSeconds: 5
          livenessProbe:
            httpGet:
              path: /health
              port: 3003
            initialDelaySeconds: 10
            periodSeconds: 10
          resources:
            requests:
              cpu: 50m
              memory: 64Mi
            limits:
              cpu: 200m
              memory: 128Mi
---
apiVersion: v1
kind: Service
metadata:
  name: orders-svc
  namespace: microapp
  labels:
    app: orders-service
spec:
  type: ClusterIP
  selector:
    app: orders-service
  ports:
    - port: 3003
      targetPort: 3003
      name: http
